--- a/src/Makefile
+++ b/src/Makefile
@@ -3,7 +3,7 @@ SRC_DIR = ./
 #EXE_DIR := ./bin
 CC := g++
 CPPFLAGS :=  -g -Wno-deprecated
-LIBS := -lpthread -ljson
+LIBS := -lpthread -ljson -lhiredis
 INC_FILE := $(addprefix -I, $(INC_DIR))
 CPP_FILE :=  $(wildcard ./*.cc) 
 OBJS := $(patsubst %.cc, %.o, $(CPP_FILE))
